--- a/TP_MLIA_2025_Colab_ETU.ipynb
+++ b/TP_MLIA_2025_Colab_ETU.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mdestr/Spark/blob/main/TP_MLIA_2025_Colab_ETU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "CNLvEQbhnAfQ"
       },
       "source": [
@@ -2034,8 +2024,7 @@
       "widgets": {}
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
